[package]
name = "rust-web-markdown"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.70", features=["MouseEvent"]}
pulldown-cmark-wikilink = { version="0.1.1", git="https://github.com/amaali7/pulldown-cmark-wikilink" }
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"]}
katex = {version="0.4.6", default-features=false, features=["wasm-js"], optional=true}
lazy_static = "1.5.0"

[features]
default = ["maths"]
debug = []
maths = ["katex"]
